...
      setExternalOpenError
    );
  };

  return (
    <Pressable
      testID="video_list_item"
      style={({ pressed }) => [
        styles.container,
        pressed && styles.pressed
      ]}
      onPress={handlePress}
    >
...
